# cow

./: README.md  cow.code-workspace  task.py
.devcontainer/: devcontainer.json
src/cow/: pyproject.toml  requirements.txt
src/cow-http-api/: cow.http
src/cow/src/cow/: __main__.py  config.py  di.py  host.py  paths.py
src/cow/src/cow/docker/: introspection.py  introspection_test.py  project_manager.py
src/cow/src/cow/processes/: shared.py  web.py  worker.py
src/cow/src/cow/web/: app.py
src/docker-environment/: docker-compose.base.yml  docker-compose.build.yml  docker-compose.dev-container.yml  docker-compose.dev.yml  docker-compose.publish.yml  docker-compose.yml
src/docker-image/: Dockerfile
src/example-compose-project/: docker-compose.yml
src/example-compose-project/docker/: docker-compose.extra.yml  docker-compose.yml
src/example-compose-project/html/: index.html  index.php
src/example/config/: config.toml
src/scripts/: publish.sh
src/workdir/: .gitignore
src/workdir/config/: config.toml
src/workdir/logs/: web.out  worker.out
